--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,41 @@
   pointer-events: none;
 }
 
+.flx{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.size{
+  width: 100vw;
+  height: 100vh;
+  margin-top: 10rem;
+}
+.card{
+  margin: 2rem;
+  /* border: 1px solid rgb(61, 58, 58); */
+  box-shadow: 1px 1px 6px rgb(80, 77, 77);
+  padding: 2rem;
+  border-radius: 2rem;
+}
+
+.inner{
+  padding: 2rem;
+}
+form input{
+  margin: .5rem;
+}
+
+form button{
+  color: aliceblue;
+  background: rgb(96, 96, 228);
+  padding: .5rem;
+  border-radius: 15px;
+  text-align: center;
+  letter-spacing: 5px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
